style.css
.body-color {

}

.heading{
    
}

.title{
    
}

html, body {
    margin: 10;
    padding: 10;
    box-sizing: border-box; /* ensures padding/border don’t increase width */
}

body{
    background-color:beige;
}

div {
    margin-bottom: 30px;
}

/*-----------------------------------------------------------------------*/

/* Navigation Bar Alignment + Color of Background */

.navigation {
  background-color: #333;
  display:flex;
  overflow: hidden;
  padding: 3px 20px;
  align-items: center;
}

.navigation .a-text {
  color: white;
  text-decoration: none;
  padding: 14px 20px;
  display: flex;
  align-items: center;
  font-family: 'Helvetica', monospace;
}

.navigation .logo{
    align-items: center;
    padding: 9px 10px;
    display: inline-block
}


.navigation .a-text:hover,
.navigation .logo:hover{
  background-color: #575757;
}

/*-----------------------------------------------------------------------*/

/*Raphael Title Bar*/

.titlebar {
    background-image: url("images/kaleidosphoto1.jpeg");
    display:flex;
    align-items:center;
    background-size:cover;
    background-position:center;
    text-align:center;
    flex-direction: column;
    height: clamp(300px, 40vh, 450px);

}


.titlebar .maintext{
    font-size: clamp(80px, 16vw, 200px);
    font-family: 'Roboto Mono', monospace;
    font-weight: 700;
    color: bisque;
    display: center;
}

.titlebar .subtext{
    font-size: clamp(40px, 3vw, 60px);
    font-family: 'Roboto Mono', monospace;
    font-weight: 400;
    color:bisque;
    display: center;
}

/*-----------------------------------------------------------------------*/

